# subtitle-translate-rs

./: Cargo.toml  clippy.toml
.github/workflows/: build.yaml
src/: api_types.rs  main.rs
