[package]
name = "subtitle-translate"
description = "Translate subtitle files by interacting with a LibreTranslate instance."
version = "0.1.0"
edition = "2024"
authors = [
    "Lily Hopkins <lily@hpkns.uk>",
]

[dependencies]
anyhow = "1.0.97"
aspasia = "0.2.1"
clap = { version = "4.5.31", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
